manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-server
  labels:
    app: ubuntu-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ubuntu-server
  template:
    metadata:
      labels:
        app: ubuntu-server
    spec:
      volumes:
        - name: user-data
          persistentVolumeClaim:
            claimName: ubuntu-pvc
      containers:
        - name: sec-labs
          image: dclinics/sec-labs:v3
          ports:
            - containerPort: 22
            - containerPort: 5000
          volumeMounts:
            - mountPath: /home/users
              name: user-data
---
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-server-service
  labels:
    app: ubuntu-server
spec:
  selector:
    app: ubuntu-server
  ports:
    - protocol: TCP
      name: ssh
      port: 22
      targetPort: 22
    - protocol: TCP
      name: web-terminal
      port: 5000
      targetPort: 5000
  type: ClusterIP
