manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotty-backend-service
  namespace: terminal-app
spec:
  selector:
    app: gotty-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gotty-frontend-service
  namespace: terminal-app
spec:
  selector:
    app: gotty-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
