manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotty-ingress
  namespace: sec
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost  # You can use 127.0.0.1 as well
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotty-terminal-service  # This should match your service name
            port:
              number: 8090
